[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
log = "0.4"
env_logger = "0.9"
threadpool = "1.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
